# ifunny-authentication-rust

./: Cargo.toml  README.md  docs.sh
.github/workflows/: Release.yml
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/fmt/: trait.Debug.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/lib/: all.html  index.html  sidebar-items.js
docs/lib/basic/: index.html  sidebar-items.js  struct.BasicGenerator.html
docs/lib/client/: fn.login.html  index.html
docs/lib/error/: enum.Error.html  index.html
docs/src/lib/: basic.rs.html  client.rs.html  error.rs.html  lib.rs.html
src/: basic.rs  client.rs  error.rs  lib.rs  main.rs
