[package]
name = "ifunny-auth"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ifunny_auth"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
sha1_smol = "1.0.0"
base64ct = { version = "1.6.0", features = ["alloc"] }
reqwest = { version = "0.11.20", features = ["json"] }
tokio = { version = "1", features = ["full"] }
json = "0.12.4"
open = "5.0.0"
text_io = "0.1.12"
rpassword = "7.2.0"
sha2 = "0.10.7"
uuid = { version = "1.4.1", features = ["v4"] }
